libquantum 0.2.3:
	- Added density operator formalism
	- Added functions for dot product and purity
	- Usage of fabsf led to trouble on Solaris, replaced by fabs
	- Qureg initialization does not seed RNG anymore
	- Fixed some potential installation problems

libquantum 0.2.2:
	- Added quantum object code interface
	- Additional configure options for better portability
	- Added Kronecker product function
	- Some minor fixes

libquantum 0.2.1:
	- Completed GNU/Hurd and FreeBSD ports
	- Added unbounded toffoli gate
	- Changed hashing method to linear probing (breaks backward 
	  compatibility)
	- Optimized quantum_gate1 and gates using quantum_cexp
	- Added a bit measurement function that does not remove the
	  measured bit
	- Corrected qft, added qft_inv and adjusted shor
	- Corrected the implementation of the Walsh-Hadamard transform
	- Supplied version information

libquantum 0.2.0:
	- Added Quantum Error Correction
	- Included an Implementation of Grover's algorithm
	- Added some inverse functions and conditional phase kick
	- Improved speed of the decoherence simulation
	- Fixed a memory leak in the quantum register deletion routine
	- Fixed a segfault in the sigma functions
	- Fixed a typo in the configure script that could result in a build 
	  failure

libquantum 0.1.1:
	- Completed rotation gates (quantum_r_z)
	- Fixed a build problem with the demo program
	- Fixed some header inconsistencies

libquantum 0.1.0:
	initial public release